crates/reinhardt-pages/tests/ui/client_form/choices/fail/deserialize_rename_collision.stderr
error: ClientFormChoices serde alias `live` collides with an emitted choice value
 --> tests/ui/client_form/choices/fail/deserialize_rename_collision.rs:7:2
  |
7 |     Fake,
  |     ^^^^
